--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,41 +18,45 @@
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol> -->
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="d-block w-100" th:src="${'/assests/home1.jpg'}" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" th:src="${'/assests/home2.jpg'}" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" th:src="${'/assests/home3.jpg'}" alt="Third slide">
-                  </div>
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" th:src="${'/assests/home1.jpg'}" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" th:src="${'/assests/home2.jpg'}" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" th:src="${'/assests/home3.jpg'}" alt="Third slide">
+                    </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
                 </a>
-              </div>
+            </div>
         </section>
-
+        <!-- <div>
+            <div class="container text-center">
+                <h1>Our features</h1>
+            </div>
+        </div> -->
         <!-- Way of management -->
         <section class="banner-back">
             <div class="row banner-background">
                 <div class="col">
                     <div class="container-fluid">
-                        <h1 class="quotes text-white mt-5 text-center">A better way of <span style="color: #F3D250 !important">Management</span></h1>
+                        <h1 class="quotes text-white mt-5 text-center">A better way of <span
+                                style="color: #F3D250 !important">Management</span></h1>
                         <!-- <img class="banner-pic" th:src="${'/assests/ab-1.png'}" alt=""> -->
                         <div class="card definition text-center mt-3">
-                            <p>Easy to mange your PG, Hostel and your lodge.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laborum minima totam veniam
-                                explicabo, adipisci, consequuntur odio cupiditate aut repellat nihil ullam nisi ex
-                                deserunt
-                                illo veritatis facere quisquam. Dolore?</p>
-                                
+                            <p>we provide Efficiently utilizing time to accomplish tasks and goals, Establishing clear
+                                lines of communication and effectively conveying information, Delegating tasks and 
+                                responsibilities to the right people to achieve maximum productivity and Monitoring and 
+                                evaluating the performance of individuals or teams to identify areas for improvement.</p>
+
                         </div>
                     </div>
                     <img class="flying-aero my-5" th:src="${'/assests/flyingAero.png'}" alt="">
@@ -72,17 +76,20 @@
                 <div class="col">
                     <div class="container text-center">
                         <img class="banner-pic my-5" th:src="${'/assests/register.png'}" alt="">
-                        
+
                     </div>
                 </div>
                 <div class="col">
                     <div class="container text-center">
-                        <h1 class="quotes text-white mt-5">Easy to register</h1>
+                        <h1 class="quotes text-white mt-5">Easy to <span style="color: #F3D250 !important">register</span></h1>
                         <div class="card definition text-center mt-3">
                             <p>you can easily register to get the benifit</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quam, fuga quod hic earum
-                            libero corrupti odio rem tenetur explicabo maxime at cum fugiat esse adipisci, suscipit,
-                            blanditiis quo. Eaque!</p>
+                            <p>Our simple registration process takes only a few minutes to complete, 
+                                with clear and concise instructions to guide you through each step, We 
+                                have designed our registration process to be user-friendly and intuitive, 
+                                making it easy for you to create an account and start using our services, 
+                                We prioritize security and privacy in our registration process, with robust 
+                                measures in place to protect your personal information and prevent unauthorized access.</p>
                         </div>
                     </div>
                 </div>
@@ -96,17 +103,19 @@
                     <div class="container text-center">
                         <h1 class="monitor mt-5">Easy to Pay</h1>
                         <div class="card definition text-center mt-3">
-                            <p>Multiple payment options are avialiable</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quam, fuga quod hic earum
-                            libero corrupti odio rem tenetur explicabo maxime at cum fugiat esse adipisci, suscipit,
-                            blanditiis quo. Eaque!</p>
+                            <p>You can make a quick and easy payment online using our secure payment portal, 
+                                We offer a variety of payment options, including automatic payments, 
+                                to make paying your bill easy and hassle-free, Our multiple payment system allows you 
+                                to choose the method that best suits your needs, making it easy to complete transactions 
+                                and manage your finances and Our customer service team is 
+                                always available to assist you with any questions or concerns regarding your payment.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="container text-center">
                         <img class="banner-pic my-5" th:src="${'/assests/payment.png'}" alt="">
-                    </div> 
+                    </div>
                 </div>
             </div>
         </section>
@@ -121,12 +130,15 @@
                 </div>
                 <div class="col">
                     <div class="container-fluid text-center">
-                        <h1 class="mt-5 text-center monitor">Easy to <span>monitor</span></h1>
+                        <h1 class="mt-5 text-center monitor ">Easy to <span>monitor</span></h1>
                         <div class="card definition text-center mt-3">
-                            <p>Easy to monitor your assets</p>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam dignissimos vitae
-                                magnam consectetur eaque. Rem, ad tenetur placeat, quam, quisquam quaerat sunt harum
-                                itaque culpa impedit facilis? Repudiandae, officiis aut!</p>
+                            <p>Our user-friendly dashboard makes it easy to monitor your account 
+                                activity and stay up-to-date on your finances, We provide regular 
+                                updates and notifications to help you stay informed and monitor your 
+                                account activity in real-time, Our intuitive interface makes it easy to 
+                                navigate and monitor your account, with clear and concise information presented 
+                                in a user-friendly format and Our customer service team is available 24/7 to 
+                                help you monitor your account and address any concerns or questions you may have.</p>
                         </div>
                     </div>
                 </div>
@@ -134,36 +146,65 @@
         </section>
 
         <!-- Dashboard are availiable -->
-        <section class="banner-back dashboard">
+        <section class="banner-back dashboard ">
             <div class="row">
                 <div class="col">
                     <div class="container-fluid text-center">
-                        <h1 class="mt-5 text-center monitor">Dashboard</span></h1>
+                        <h1 class="mt-5 text-center monitor dash">Dashboard</span></h1>
                         <div class="card definition text-center mt-3">
-                            <p class="primary-dark">Dashboard is availiable to view your Data</p>
-                            <p class="primary-dark">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam dignissimos vitae
-                                magnam consectetur eaque. Rem, ad tenetur placeat, quam, quisquam quaerat sunt harum
-                                itaque culpa impedit facilis? Repudiandae, officiis aut!</p>
+                            <!-- <p class="primary-dark">Dashboard is availiable to view your Data</p> -->
+                            <p class="primary-dark">Our customizable dashboard provides a comprehensive 
+                                overview of your data and metrics, making it easy to track progress towards 
+                                your goals, With our user-friendly dashboard, you can access key information 
+                                and insights at a glance, allowing you to make informed decisions quickly and 
+                                efficiently, Our dashboard is accessible from any device with an internet connection, 
+                                making it easy to stay connected and informed while on-the-go.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="container text-center">
                         <img class="banner-pic my-5" th:src="${'/assests/monitor.png'}" alt="">
-                    </div> 
+                    </div>
                 </div>
             </div>
         </section>
 
-        <!-- savetime -->
-        <section class="banner-back dashboard">
+        <!-- Security -->
+        <section class="banner-back dashboard ">
+            <div class="row">
+                <div class="col">
+                    <div class="container text-center">
+                        <img class="banner-pic my-5" th:src="${'/assests/secLock.png'}" alt="">
+                    </div>
+                    
+                </div>
+                <div class="col">
+                    <div class="container-fluid text-center">
+                        <h1 class="mt-5 text-center monitor dash">Security</span></h1>
+                        <div class="card definition text-center mt-3">
+                            <!-- <p class="primary-dark">Dashboard is availiable to view your Data</p> -->
+                            <p class="primary-dark">Our customizable dashboard provides a comprehensive 
+                                overview of your data and metrics, making it easy to track progress towards 
+                                your goals, With our user-friendly dashboard, you can access key information 
+                                and insights at a glance, allowing you to make informed decisions quickly and 
+                                efficiently, Our dashboard is accessible from any device with an internet connection, 
+                                making it easy to stay connected and informed while on-the-go.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Customer support -->
+        <section class="banner-back customer-support">
             <div class="row">
                 <div class="col">
                     <div class="container-fluid text-center">
-                        <h1 class="mt-5 text-center monitor">Save your time</span></h1>
+                        <h1 class="mt-5 monitor text-white">Customer support</span></h1>
                         <div class="card definition text-center mt-3">
-                            <p class="primary-dark">Save your time from management</p>
-                            <p class="primary-dark">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam dignissimos vitae
+                            <p class="text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam
+                                dignissimos vitae
                                 magnam consectetur eaque. Rem, ad tenetur placeat, quam, quisquam quaerat sunt harum
                                 itaque culpa impedit facilis? Repudiandae, officiis aut!</p>
                         </div>
@@ -171,8 +212,8 @@
                 </div>
                 <div class="col">
                     <div class="container text-center">
-                        <img class="banner-pic my-5" th:src="${'/assests/saveTime.png'}" alt="">
-                    </div> 
+                        <img class="banner-pic my-5" th:src="${'/assests/contact.png'}" alt="">
+                    </div>
                 </div>
             </div>
         </section>
