--- a/src/main/resources/templates/ownerviews/ownerdash.html
+++ b/src/main/resources/templates/ownerviews/ownerdash.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <!-- Recent guests details -->
-                    <div class="card">
+                    <div class="card smart-card">
                         <h2 class="text-center text-muted">Recent guests</h2>
                         <div class="container-fluid">
                             <!-- <div th:if="${rguest.size == 0 || rguest == null}">
