--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,7 +4,7 @@
 
 /* colours */
 .bg-primary {
-    background-color: #2F4454!important;
+    background-color: #477bff !important;
     color: whitesmoke!important;
 }
 
@@ -43,6 +43,10 @@ body, html {
     border-radius: 5px;
     box-shadow: 0px 1px 10px 1px #000 ;
     /* box-shadow: 1px 10px 1px #e2e2e2; */
+}
+
+.custom-button {
+    border-radius: 25px !important;
 }
 
 .profile-card img {
@@ -104,6 +108,8 @@ body, html {
     /* background: #F64C72; */
     /* border-radius: 25px; */
     padding: 10px;
+    /* text-shadow: 2px 2px 5px #363949; */
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 
 }
 
@@ -137,8 +143,21 @@ body, html {
     color: white;
     border: #e2e2e2;
     letter-spacing: 3px;
-    box-shadow: 0 2rem 3rem var(--color-dark) !important;
+    padding: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     /* background-color: rgba(0, 0, 0, 0.2); */
+}
+
+.signup-back {
+    /* clip-path: polygon(50.1% 5%, 100% 0%, 96.3% 58%, 100% 100%, 0% 100%, 4.1% 56.8%, 0% 0%); */
+    -webkit-box-shadow: 11.5px 8.5px 12.5px 0.5px #a9a5a5;
+    -moz-box-shadow: 11.5px 8.5px 12.5px 0.5px #a9a5a5;
+    box-shadow: 11.5px 8.5px 12.5px 0.5px #a9a5a5;
+    background: #477bff;
+}
+
+.signup-text {
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .register-banner {
@@ -151,31 +170,55 @@ body, html {
     background: #F3D250 !important;
 }
 
+.customer-support {
+    background: #372C2E !important;
+}
+
 .primary-dark {
     color: #000 !important;
 }
 
 .monitor {
-    color: #C3073F;
+    color: #F3D250;
     font-family: 'Roboto Slab', serif;
-    background: #e2e2e2;
     padding: 10px;
     border-radius: 25px;
     font-weight: 800;
     font-size: 2rem;
 }
 
+.dash {
+    color: #0B0C10 !important;
+}
+
 .flying-aero {
-    height: 15vh;
-    width: 15vh;
+    height: 12vh;
+    width: 12vh;
     position: absolute;
     /* margin-top: 5%; */
-    margin-left: 75%;
+    margin-left: 80%;
+}
+
+.smart-card {
+    background: #0A3DB2;
+    -webkit-backdrop-filter: blur(17px);
+    backdrop-filter: blur(17px);
+    border: 1px solid rgba(143,151,228,0.225);
+}
+
+@media screen and (max-width: 500px) {
+    .definition {
+        margin-bottom: 2rem;
+    }
 }
 
 @media screen and (max-width: 700px) {
     .flying-aero {
         display: none;
+    }
+    
+    .definition {
+        margin-bottom: 2rem;
     }
 }
 
