--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
         <div class="container py-5">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-lg-12 col-xl-11">
-                    <div class="card text-black" style="border-radius: 20px;">
+                    <div class="card signup-back text-white" style="border-radius: 20px;">
                         <div class="card-body p-md-5">
                             <div class="row justify-content-center">
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
@@ -49,7 +49,7 @@
                                         </div>
 
                                         <div class="d-flex justify-content-center mx-4 py-3 mb-lg-4">
-                                            <button type="submit" class="btn btn-primary btn-lg">Login</button>
+                                            <button type="submit" class="btn btn-warning custom-button">Login</button>
                                         </div>
                                     </form>
                                 </div>
