--- a/src/main/resources/templates/ownerviews/guestdetails.html
+++ b/src/main/resources/templates/ownerviews/guestdetails.html
@@ -196,6 +196,9 @@
                     </div>
                 </div>
             </div>
+            <a th:href="@{'tel:'+${guest.phone}}" class="btn btn-success btn-block mb-5 call-button">
+                <i class="fa-solid fa-phone"></i>
+            </a>
         </div>
 
         <script>
