--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -13,12 +13,13 @@
         <div class="container py-5">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-lg-12 col-xl-11">
-                    <div class="card text-black" style="border-radius: 20px;">
+                    <div class="card signup-back text-black" style="border-radius: 20px;">
+                        <div class="container text-center">
+                            <p class="text-center signup-text text-white h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                        </div>
                         <div class="card-body p-md-5">
                             <div class="row justify-content-center">
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-
-                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
                                     <!-- Alert message -->
                                     <div th:if="${success}" class="alert alert-success text-center" role="alert"
@@ -111,7 +112,7 @@
                                                         <div class="form-check">
                                                             <input class="form-check-input" type="radio" name="gender"
                                                                 id="gender" value="M">
-                                                            <label class="form-check-label" for="exampleRadios1">
+                                                            <label class="form-check-label text-white" for="exampleRadios1">
                                                                 Male
                                                             </label>
                                                         </div>  
@@ -121,7 +122,7 @@
                                                     <div class="form-check">
                                                         <input class="form-check-input" type="radio" name="gender"
                                                             id="gender" value="F">
-                                                        <label class="form-check-label" for="exampleRadios1">
+                                                        <label class="form-check-label text-white" for="exampleRadios1">
                                                             Female
                                                         </label>
                                                     </div>
@@ -131,7 +132,7 @@
 
                                         <div class="form-check mt-2">
                                             <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
-                                            <label class="form-check-label" for="exampleCheck1">Accept terms and
+                                            <label class="form-check-label text-white" for="exampleCheck1">Accept terms and
                                                 conditions</label>
                                         </div>
 
@@ -144,13 +145,14 @@
                                         </div> -->
 
                                         <div class="d-flex justify-content-center mx-4 py-3 mb-lg-4">
-                                            <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                                            <button type="submit" class="btn custom-button btn-warning btn-lg">Register</button>
                                         </div>
                                     </form>
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                                        class="img-fluid" alt="Sample image">
+                                    <img th:src="${'/assests/register.png'}" class="img-fluid" alt="Sample image">
+                                    <!-- <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                                        class="img-fluid" alt="Sample image"> -->
                                 </div>
                             </div>
                         </div>
