--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,11 +51,12 @@
                         <h1 class="quotes text-white mt-5 text-center">A better way of <span
                                 style="color: #F3D250 !important">Management</span></h1>
                         <!-- <img class="banner-pic" th:src="${'/assests/ab-1.png'}" alt=""> -->
-                        <div class="card definition text-center mt-3">
-                            <p>we provide Efficiently utilizing time to accomplish tasks and goals, Establishing clear
-                                lines of communication and effectively conveying information, Delegating tasks and 
-                                responsibilities to the right people to achieve maximum productivity and Monitoring and 
-                                evaluating the performance of individuals or teams to identify areas for improvement.</p>
+                        <div class="card definition pl-3 mt-3">
+                            <p class="m-2">we provide Efficiently utilizing time to accomplish tasks and goals, Establishing clear
+                                lines of communication and effectively conveying information, Delegating tasks and
+                                responsibilities to the right people to achieve maximum productivity and Monitoring and
+                                evaluating the performance of individuals or teams to identify areas for improvement.
+                            </p>
 
                         </div>
                     </div>
@@ -81,15 +82,16 @@
                 </div>
                 <div class="col">
                     <div class="container text-center">
-                        <h1 class="quotes text-white mt-5">Easy to <span style="color: #F3D250 !important">register</span></h1>
-                        <div class="card definition text-center mt-3">
-                            <p>you can easily register to get the benifit</p>
-                            <p>Our simple registration process takes only a few minutes to complete, 
-                                with clear and concise instructions to guide you through each step, We 
-                                have designed our registration process to be user-friendly and intuitive, 
-                                making it easy for you to create an account and start using our services, 
-                                We prioritize security and privacy in our registration process, with robust 
-                                measures in place to protect your personal information and prevent unauthorized access.</p>
+                        <h1 class="quotes text-white mt-5">Easy to <span
+                                style="color: #F3D250 !important">register</span></h1>
+                        <div class="card definition pl-3 mt-3">
+                            <p class="m-2">Our simple registration process takes only a few minutes to complete,
+                                with clear and concise instructions to guide you through each step, We
+                                have designed our registration process to be user-friendly and intuitive,
+                                making it easy for you to create an account and start using our services,
+                                We prioritize security and privacy in our registration process, with robust
+                                measures in place to protect your personal information and prevent unauthorized access.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -102,13 +104,14 @@
                 <div class="col">
                     <div class="container text-center">
                         <h1 class="monitor mt-5">Easy to Pay</h1>
-                        <div class="card definition text-center mt-3">
-                            <p>You can make a quick and easy payment online using our secure payment portal, 
-                                We offer a variety of payment options, including automatic payments, 
-                                to make paying your bill easy and hassle-free, Our multiple payment system allows you 
-                                to choose the method that best suits your needs, making it easy to complete transactions 
-                                and manage your finances and Our customer service team is 
-                                always available to assist you with any questions or concerns regarding your payment.</p>
+                        <div class="card definition pl-3 mt-3">
+                            <p class="m-2">You can make a quick and easy payment online using our secure payment portal,
+                                We offer a variety of payment options, including automatic payments,
+                                to make paying your bill easy and hassle-free, Our multiple payment system allows you
+                                to choose the method that best suits your needs, making it easy to complete transactions
+                                and manage your finances and Our customer service team is
+                                always available to assist you with any questions or concerns regarding your payment.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -131,13 +134,13 @@
                 <div class="col">
                     <div class="container-fluid text-center">
                         <h1 class="mt-5 text-center monitor ">Easy to <span>monitor</span></h1>
-                        <div class="card definition text-center mt-3">
-                            <p>Our user-friendly dashboard makes it easy to monitor your account 
-                                activity and stay up-to-date on your finances, We provide regular 
-                                updates and notifications to help you stay informed and monitor your 
-                                account activity in real-time, Our intuitive interface makes it easy to 
-                                navigate and monitor your account, with clear and concise information presented 
-                                in a user-friendly format and Our customer service team is available 24/7 to 
+                        <div class="card definition pl-3 mt-3">
+                            <p class="m-2">Our user-friendly dashboard makes it easy to monitor your account
+                                activity and stay up-to-date on your finances, We provide regular
+                                updates and notifications to help you stay informed and monitor your
+                                account activity in real-time, Our intuitive interface makes it easy to
+                                navigate and monitor your account, with clear and concise information presented
+                                in a user-friendly format and Our customer service team is available 24/7 to
                                 help you monitor your account and address any concerns or questions you may have.</p>
                         </div>
                     </div>
@@ -151,13 +154,13 @@
                 <div class="col">
                     <div class="container-fluid text-center">
                         <h1 class="mt-5 text-center monitor dash">Dashboard</span></h1>
-                        <div class="card definition text-center mt-3">
+                        <div class="card definition pl-3 mt-3">
                             <!-- <p class="primary-dark">Dashboard is availiable to view your Data</p> -->
-                            <p class="primary-dark">Our customizable dashboard provides a comprehensive 
-                                overview of your data and metrics, making it easy to track progress towards 
-                                your goals, With our user-friendly dashboard, you can access key information 
-                                and insights at a glance, allowing you to make informed decisions quickly and 
-                                efficiently, Our dashboard is accessible from any device with an internet connection, 
+                            <p class="primary-dark m-2">Our customizable dashboard provides a comprehensive
+                                overview of your data and metrics, making it easy to track progress towards
+                                your goals, With our user-friendly dashboard, you can access key information
+                                and insights at a glance, allowing you to make informed decisions quickly and
+                                efficiently, Our dashboard is accessible from any device with an internet connection,
                                 making it easy to stay connected and informed while on-the-go.</p>
                         </div>
                     </div>
@@ -177,18 +180,18 @@
                     <div class="container text-center">
                         <img class="banner-pic my-5" th:src="${'/assests/secLock.png'}" alt="">
                     </div>
-                    
+
                 </div>
                 <div class="col">
                     <div class="container-fluid text-center">
                         <h1 class="mt-5 text-center monitor dash">Security</span></h1>
-                        <div class="card definition text-center mt-3">
+                        <div class="card definition pl-3 mt-3">
                             <!-- <p class="primary-dark">Dashboard is availiable to view your Data</p> -->
-                            <p class="primary-dark">Our customizable dashboard provides a comprehensive 
-                                overview of your data and metrics, making it easy to track progress towards 
-                                your goals, With our user-friendly dashboard, you can access key information 
-                                and insights at a glance, allowing you to make informed decisions quickly and 
-                                efficiently, Our dashboard is accessible from any device with an internet connection, 
+                            <p class="primary-dark m-2">Our customizable dashboard provides a comprehensive
+                                overview of your data and metrics, making it easy to track progress towards
+                                your goals, With our user-friendly dashboard, you can access key information
+                                and insights at a glance, allowing you to make informed decisions quickly and
+                                efficiently, Our dashboard is accessible from any device with an internet connection,
                                 making it easy to stay connected and informed while on-the-go.</p>
                         </div>
                     </div>
@@ -202,11 +205,10 @@
                 <div class="col">
                     <div class="container-fluid text-center">
                         <h1 class="mt-5 monitor text-white">Customer support</span></h1>
-                        <div class="card definition text-center mt-3">
-                            <p class="text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam
-                                dignissimos vitae
-                                magnam consectetur eaque. Rem, ad tenetur placeat, quam, quisquam quaerat sunt harum
-                                itaque culpa impedit facilis? Repudiandae, officiis aut!</p>
+                        <div class="card definition pl-3 mt-3">
+                            <p class="text-white m-2">Our primary goal is support you to ensure your
+                                satisfaction and loyalty by providing timely and effective solutions to your problems.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -219,5 +221,6 @@
         </section>
     </section>
 </body>
+
 
 </html>
