--- a/src/main/resources/static/css/gstyle.css
+++ b/src/main/resources/static/css/gstyle.css
@@ -7,6 +7,11 @@
     --color-success: #1c9d72;
     --color-warning: #ffbb55;
     --color-white: #fff;
+    --color-lemon-tonic: #FCF951FF;
+    --color-purple: #7C5989;
+    --color-pink: #BB75AD;
+    --color-navy:  #6883bc;
+    --color--meta-black: #01081F;
     --color-info-dark: #7d8da1;
     --color-info-light: #dce1eb;
     --color-dark: #363949;
@@ -15,7 +20,7 @@
     --color-dark-variant: #677483;
     --color-background: #f6f6f9;
     
-    --card-border-radius: 2rem;
+    --card-border-radius: 20px;
     --border-radius-1: 0.4rem;
     --border-radius-2: 0.8rem;
     --border-radius-3: 1.2rem;
@@ -57,6 +62,7 @@ body {
     font-family: poppins, sans-serif;
     font-size: 0.88rem;
     background: var(--color-background);
+    /* background: #04123b; */
     user-select: none;
     overflow-x: hidden;
     color: var(--color-dark);
@@ -67,7 +73,7 @@ body {
     width: 96%;
     margin: 0 auto;
     gap: 1.8rem;
-    /* grid-template-columns: 14rem aouto 23 rem; */
+    grid-template-columns: 14rem aouto 23 rem;
 }
 
 img { 
@@ -101,12 +107,34 @@ small {
 }
 
 .profile-photo {
-    width: 4.8rem;
-    height: 4.8rem;
+    width: 5rem;
+    height: 5rem;
     border-radius: 50%;
     border-color: #7380ec;
     border-width: 3px;
     overflow: hidden;
+}
+
+.profile-card {
+    width: 95%;
+    margin-left: 7px;
+    border-radius: 8px !important;
+    background: var(--color-primary);
+    /* background: var(--color-success); */
+    color: var(--color-white);
+    /* clip-path: circle(100px at 0 0); */
+}
+
+.dash-card {
+    border-radius: 8px !important;
+    background: var(--color-warning) !important;
+    /* color: var(--color-white); */
+}
+
+.dash-card2 {
+    border-radius: 8px !important;
+    background: var(--color-success) !important;
+    /* color: var(--color-white); */
 }
 
 .sm-profile {
@@ -126,6 +154,7 @@ small {
 
 .sidebar {
     width: 20%;
+    /* background: var(--color-dark-variant); */
     background: white;
     height: 100vh;
     position: fixed;
@@ -223,8 +252,8 @@ small {
 }
 
 .top-profile {
-    margin-top: -50px;
-    margin-inline: 50%;
+    margin-top: -70px;
+    margin-inline: calc(50% - 7rem / 2);
     overflow: hidden;
 }
 
@@ -256,6 +285,52 @@ small {
     margin-left: 30%;
 }
 
+/* Top cards CSS */
+.total-collection span{
+    border-radius: 50%;
+    /* margin-top: 4rem; */
+    padding: 5px;
+    background: var(--color-white);
+    color: var(--color-primary);
+    font-weight: 800;
+}
+
+.total-collection h1 {
+    color: var(--color-info-light);
+    margin-left: calc(50% - 10rem / 2);
+    opacity: 0.8;
+}
+
+.total-guest span {
+    border-radius: 50%;
+    /* margin-top: 4rem; */
+    padding: 5px;
+    background: var(--color-white);
+    color: var(--color-warning);
+    font-weight: 800;
+}
+
+.total-guest h1 {
+    color: var(--color-info-light);
+    margin-left: calc(50% - 10rem / 2);
+    opacity: 0.8;
+}
+
+.card3 span {
+    border-radius: 50%;
+    /* margin-top: 4rem; */
+    padding: 5px;
+    background: var(--color-white);
+    color: var(--color-success);
+    font-weight: 800;
+}
+
+.card3 h1 {
+    color: var(--color-info-light);
+    margin-left: calc(50% - 10rem / 2);
+    opacity: 0.8;
+}
+
 .card .pginfo span {
     width: 2.8rem;
     height: 2.8rem;
@@ -266,12 +341,103 @@ small {
     border-radius: 50%;
 }
 
+.rec-gst {
+    background: #d2d2d2;
+    color: var(--color--meta-black);
+    /* background: var(--color-purple);
+    color: var(--color-lemon-tonic); */
+}
+
+.link-d {
+    background: var(--color-white);
+    border-radius: 15px;
+    padding-inline: 9px;
+}
+
 .card .pginfo {
     display: flex;
 }
 
 .card .pginfo h2 {
     margin-left: 30%;
+}
+
+.collection {
+    width: 160px;
+    height: 160px;
+}
+
+.outer {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    /* border: 1px solid red; */
+    padding: 20px;
+    box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15),
+                -6px -6px 10px -1px rgba(255,255,255,0.7);
+}
+
+.inner {
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid red; */
+    box-shadow: inset 4px 4px 6px -1px rgba(0,0,0,0.2),
+                inset -4px -4px 6px -1px rgba(255,255,255,0.7),
+                -0.5px -0.5px 0px rgba(255,255,255),
+                0.5px 0.5px 0px rgba(0,0,0,0.15),
+                0px 12px 10px -10px rgba(0,0,0,0.05);
+}
+
+#number {
+    font-weight: 800;
+    color: 555;
+}
+
+#number2 {
+    font-weight: 800;
+    color: 555;
+}
+
+/* circle {
+    fill: none;
+    stroke: url(#GradientColor);
+    stroke-width: 20px;
+    stroke-dasharray: 400;
+    stroke-dashoffset: 400;
+    animation: anim 2s linear forwards;
+} */
+
+.progress-circle {
+    stroke: url(#GradientColor);
+    stroke-width: 20px;
+    stroke-dasharray: 430;
+    stroke-dashoffset: 430;
+    /* animation: anim 2s linear forwards; */
+}
+
+svg {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+}
+
+@keyframes anim {
+    100% {
+        stroke-dashoffset: 165;
+    }
+}
+
+.progress {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 .pg-name {
@@ -404,6 +570,20 @@ small {
 
 .add {
     background: var(--color-success) !important;
+}
+
+.dp-button {
+    border-radius: 50%;
+    border-color: white;
+    border-width: 2px;
+    padding: 2px;
+    height: 22px;
+    width: 22px;
+    color: white;
+    background-color: #477bff;
+    margin-inline: calc(50% - 1px / 2);
+    margin-top: -25px;
+    position: absolute;
 }
 
 .update {
