--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -24,9 +24,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item active">
-                    <a class="nav-link" href="home" hint="Home"><i class="fa-solid fa-house"></i></i><span class="sr-only">(current)</span></a>
+                    <!-- if guest is login -->
+                    <div th:if="${guest != null}">
+                        <a class="nav-link" th:href="@{'/guest/dashboard'}" hint="Home"><i class="fa-solid fa-house"></i></i><span class="sr-only">(current)</span></a>
+                    </div>
+                    <!-- if owner is login -->
+                    <div th:if="${owner != null}">
+                        <a class="nav-link" th:href="@{'/owner/dashboard'}" hint="Home"><i class="fa-solid fa-house"></i></i><span class="sr-only">(current)</span></a>
+                    </div>
+                    <!-- Neither guest or neither owner is login -->
+                    <div th:if="${guest == null && owner == null}">
+                        <a class="nav-link" th:href="@{'/home'}" hint="Home"><i class="fa-solid fa-house"></i></i><span class="sr-only">(current)</span></a>
+                    </div>
                 </li>
+                
                 <li class="nav-item active">
                     <a class="nav-link" th:href="signup" hint="Signup"><i class="fa-solid fa-user-plus"></i></i></a>
                 </li>
