--- a/src/main/resources/templates/ownerviews/base.html
+++ b/src/main/resources/templates/ownerviews/base.html
@@ -12,7 +12,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
+     <!-- Jquery CDN -->
+     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+     integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/gstyle.css}">
     <title th:text="${title}">Home</title>
@@ -29,20 +34,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <img th:src="${'/image/'+owner.profile}" class="img-fluid" style="height: 40px; width: 40px;" alt="">
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#"><span th:text="${owner.name}"></span></a>
+                <li class="nav-item">
+                    <h3 class="nav-link text-warning" ><span th:text="${owner.name}"></span></h3>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/"><i class="fa-solid fa-house"></i></i><span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="signup"><i class="fa-solid fa-user-plus"></i></i></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="login"><i class="fa-solid fa-right-to-bracket"></i></a>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{'/logout'}" hint="LogOut">Logout</i></a>
                 </li>
             </ul>
         </div>
@@ -54,6 +53,60 @@
         <span onclick="toggleSidebar()" class="crossBtn">
             &times;
         </span>
+        <div class="card mb-5 profile-card">
+            <div class="user-profile">
+                <img th:src="${'/image/owner/'+owner.profile}" alt="" class="profile-photo top-profile">
+                <h2 th:text="${owner.name}" class="text-center mt-2"></h2>
+            </div>
+            <div class="container">
+                <table >
+                    <tr>
+                        <th>ID</th>
+                        <td th:text="${owner.id}" class="text-muted"></td>
+                    </tr>
+                    <tr>
+                        <th>Status</th>
+                        <td th:if="${owner.enabled}" class="text-success">Active</td>
+                        <td th:if="${!owner.enabled}" class="text-danger">Deactive</td>
+                    </tr>
+                    <tr>
+                        <th>Email</th>
+                        <td th:text="${owner.email}"></td>
+                    </tr>
+                    <tr>
+                        <th>Mobile</th>
+                        <td th:text="${owner.phoneNo}"></td>
+                    </tr>
+                    <tr>
+                        <th>Occ.</th>
+                        <td th:text="${owner.occupation}"></td>
+                    </tr>
+                    <tr>
+                        <th>Gender</th>
+                        <td th:text="${owner.gender}"></td>
+                    </tr>
+                    <tr>
+                        <th>DOB</th>
+                        <td th:text="${#dates.format(owner.dob,'dd-MM-yyyy')}"></td>
+                    </tr>
+                    <tr>
+                        <th>Reg.</th>
+                        <td th:text="${#dates.format(owner.regDate,'dd-MM-yyyy')}"></td>
+                    </tr>
+                    <tr>
+                        <th>Add.</th>
+                        <td th:text="${owner.address}"></td>
+                    </tr>
+                </table>
+                <div th:if="${owner.enabled}">
+                    <a href="#" class="btn btn-block btn-success"> Edit</a>
+                </div>
+                <div th:if="${!owner.enabled}">
+                    <button type="button" class="btn btn-block btn-warning" data-toggle="modal"
+                        data-target="#add-modal"> Add details</button>
+                </div>
+            </div>
+        </div>
         <a id="home-link" th:href="@{/owner/dashboard}" class="item active"><i class="fa-sharp fa-solid fa-grid-horizontal"></i>
             Dashboard</a>
         <a id="profile-link" href="#" class="item"><i class="fa-solid fa-user"></i> Profile</a>
