--- a/src/main/resources/templates/ownerviews/guestdetails.html
+++ b/src/main/resources/templates/ownerviews/guestdetails.html
@@ -158,7 +158,7 @@
                             </button>
                         </div>
 
-                        <!-- ADD FLOOR MODAL BODY -->
+                        <!-- cash collection body -->
                         <div class="modal-body">
                             <div class="container-fluid text-center">
                                 <table class="table">
@@ -176,21 +176,26 @@
                                         </div>
                                     </tr>
                                 </table>
-                                <form th:action="@{/owner/collect-cash}" method="post">
+                                
                             </div>
-                            <div class="input-group form-group ">
-                                <div class="input-group-text">
-                                    <i class="fa-solid fa-indian-rupee-sign"></i>
+                            <form id="cash-collection" th:action="@{/owner/collect-cash}" method="post"></form>
+                                <div class="input-group form-group ">
+                                    <div class="input-group-text">
+                                        <i class="fa-solid fa-indian-rupee-sign"></i>
+                                    </div>
+                                    <!-- <label for="cash-amount">Amount</label> -->
+                                    <input type="number" name="amount" class="form-control" id="amount"
+                                        placeholder="Enter amount" required>
+                                    <input type="text" name="guestId" th:value="${guest.id}" hidden>
                                 </div>
-                                <!-- <label for="cash-amount">Amount</label> -->
-                                <input type="number" name="amount" class="form-control" id="amount"
-                                    placeholder="Enter amount" required>
-                                <input type="text" name="guestId" th:value="${guest.id}" hidden>
-                            </div>
-                            <div>
-                                <!-- <button type="submit" id="update-pg" th:onclick="|collectcash(${flr.id})|" class="btn btn-block btn-success">Collect</button> -->
-                                <button type="submit" id="update-pg" class="btn btn-block btn-success">Collect</button>
-                            </div>
+                                <div class="container text-center" id="loader" style="display: none;">
+                                    <span class="fa fa-refresh fa-spin fa-3x"></span>
+                                    <h4>Please wait...</h4>
+                                </div>
+                                <div>
+                                    <!-- <button type="submit" id="update-pg" th:onclick="|collectcash(${flr.id})|" class="btn btn-block btn-success">Collect</button> -->
+                                    <button type="submit" id="collect-btn" class="btn btn-block btn-success">Collect</button>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -202,6 +207,31 @@
         </div>
 
         <script>
+            // $(document).ready(function () {
+            //     console.log("Page loaded..");
+            //     $("#cash-collection").on('submit', function(event) {
+            //         event.preventDefault();
+            //         let form = new FormData(this);
+            //         $("#cash-collect").hide();
+            //         $("#loader").show();
+            //         $.ajax({
+            //             url : "/owner/collect-cash",
+            //             type: 'POST', 
+            //             data: form,
+            //             success: function(data, textStatus, jqXHR) {
+            //                 console.log(data);
+            //                 $("#collect-btn").show();
+            //                 $("#loader").hide();
+            //             },
+            //             error: function (jqXHR, textStatus, errorThrown) {
+            //                 $("#collect-btn").show();
+            //                 $("#loader").hide();
+            //                 console.log("something went wrong");
+            //             }
+            //         });
+            //     })
+            // })
+
             function collectCash(amount) {
                 swal({
                     title: "Are you sure?",
