--- a/src/main/resources/templates/ownerviews/ownerdash.html
+++ b/src/main/resources/templates/ownerviews/ownerdash.html
@@ -10,109 +10,41 @@
 
 <body>
     <section>
-        <div class="container-fluid p-2">
-            <h1 class="text-center">Dashboard</h1>
+        <div class="container-fluid p-3">
+            <!-- <h1 class="text-center">Dashboard</h1> -->
             <div class="row">
-
-                <!-- column 1 -->
-                <div class="col-lg-6 col-12">
-                    <!-- owner details -->
-                    <div class="card">
-                        <div class="user-profile">
-                            <img th:src="${'/image/owner/'+owner.profile}" alt="" class="profile-photo top-profile">
-                            <h2 th:text="${owner.name}" class="text-center mt-2"></h2>
+                <div class="col-lg-4 col-md-6">
+                    <div class="card profile-card">
+                        <div class="total-collection d-flex">
+                            <span class="material-icons-sharp text-center">currency_rupee</span>
+                            <h1 class="text-center">Amount</h1>
                         </div>
-                        <div class="container text-center">
-                            <table class="text-center mt-2">
-                                <tr>
-                                    <th>ID</th>
-                                    <td th:text="${owner.id}" class="text-muted"></td>
-                                </tr>
-                                <tr>
-                                    <th>Status</th>
-                                    <td th:if="${owner.enabled}" class="text-success">Active</td>
-                                    <td th:if="${!owner.enabled}" class="text-danger">Deactive</td>
-                                </tr>
-
-                                <tr>
-                                    <th>Email</th>
-                                    <td th:text="${owner.email}"></td>
-                                </tr>
-                                <tr>
-                                    <th>Mobile</th>
-                                    <td th:text="${owner.phoneNo}"></td>
-                                </tr>
-                                <tr>
-                                    <th>Occupation</th>
-                                    <td th:text="${owner.occupation}"></td>
-                                </tr>
-                                <tr>
-                                    <th>Gender</th>
-                                    <td th:text="${owner.gender}"></td>
-                                </tr>
-                                <tr>
-                                    <th>DOB</th>
-                                    <td th:text="${#dates.format(owner.dob,'dd-MM-yyyy')}"></td>
-                                </tr>
-
-
-                                <tr>
-                                    <th>Registered on</th>
-                                    <td th:text="${#dates.format(owner.regDate,'dd-MM-yyyy')}"></td>
-                                </tr>
-                                <tr>
-                                    <th>Address</th>
-                                    <td th:text="${owner.address}"></td>
-                                </tr>
-                            </table>
-                            <div th:if="${owner.enabled}">
-                                <a href="#" class="btn btn-block btn-success"> Edit</a>
-                            </div>
-                            <div th:if="${!owner.enabled}">
-                                <button type="button" class="btn btn-block btn-warning" data-toggle="modal"
-                                    data-target="#add-modal"> Add details</button>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <!-- Recent guests details -->
-                    <div class="card smart-card">
-                        <h2 class="text-center text-muted">Recent guests</h2>
-                        <div class="container-fluid">
-                            <!-- <div th:if="${rguest.size == 0 || rguest == null}">
-                                <h2 class="text-danger">No guests are avialiable</h2>
-                            </div> -->
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>Dp</th>
-                                        <th>Name</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tr th:each="guest : ${rguest}">
-                                    <td>
-                                        <img class="sm-profile" th:src="${'/image/guest/'+guest.profile}" alt="">
-                                    </td>
-                                    <td>
-                                        <a th:href="${guest.pgDetails.id+'/'+guest.id}+'/'+${guest.name.replace(' ','-')}"><span
-                                                th:text="${guest.name}"></span></a>
-                                    </td>
-                                    <td th:classappend="${guest.enabled == true ? 'text-success' : 'text-danger'}">
-                                        <span th:text="${guest.enabled == true ? 'Active' : 'Deactive'}"></span>
-                                    </td>
-                                </tr>
-                            </table>
-
-                        </div>
+                        <h1 class="text-center">20,000</h1>
                     </div>
                 </div>
-
-                <!-- colume 2 -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card dash-card">
+                        <div class="total-guest d-flex">
+                            <span class="material-icons-sharp text-center">group</span>
+                            <h1 class="text-center">Guests</h1>
+                        </div>
+                        <h1 class="text-center text-white">20</h1>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="card dash-card2">
+                        <div class="card3 d-flex">
+                            <span class="material-icons-sharp text-center">notifications</span>
+                            <h1 class="text-center">Requests</h1>
+                        </div>
+                        <h1 class="text-center text-white">20</h1>
+                    </div>
+                </div>
+                <!-- column 1 -->
                 <div class="col-lg-6 col-12">
+
                     <!-- PG information -->
-                    <div class="card" style="min-height: 50px;">
+                    <div class="card rec-gst" style="min-height: 50px;">
                         <div class="container-fluid pginfo">
                             <span class="material-icons-sharp text-center">home</span>
                             <h2 class="text-center text-muted">PG information</h2>
@@ -134,6 +66,98 @@
                             </div>
                         </div>
                         <button class="btn btn-block btn-success mt-4">Add PG</button>
+                    </div>
+
+                    <!-- Recent guests details -->
+                    <div class="card rec-gst">
+                        <h2 class="text-center text-muted">Recent guests</h2>
+                        <div class="container-fluid">
+                            <!-- <div th:if="${rguest.size == 0 || rguest == null}">
+                                <h2 class="text-danger">No guests are avialiable</h2>
+                            </div> -->
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Dp</th>
+                                        <th>Name</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tr th:each="guest : ${rguest}">
+                                    <td>
+                                        <img class="sm-profile" th:src="${'/image/guest/'+guest.profile}" alt="">
+                                    </td>
+                                    <td>
+                                        <a
+                                            th:href="${guest.pgDetails.id+'/'+guest.id}+'/'+${guest.name.replace(' ','-')}"><span
+                                                th:text="${guest.name}"></span></a>
+                                    </td>
+                                    <td th:classappend="${guest.enabled == true ? 'text-success' : 'text-danger'}">
+                                        <span th:text="${guest.enabled == true ? 'Active' : 'Deactive'}"></span>
+                                    </td>
+                                </tr>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- colume 2 -->
+                <div class="col-lg-6 col-sm-12">
+                    <div class="row">
+                        <!-- Graph-1 -->
+                        <div class="col-lg-6 col-sm-12">
+                            <div class="card text-center">
+
+                                <div class="collection">
+                                    <div class="outer">
+                                        <div class="inner">
+                                            <h1 id="number">
+
+                                            </h1>
+                                        </div>
+                                    </div>
+
+                                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                                        <defs>
+                                            <linearGradient id="GradientColor">
+                                                <stop offset="0%" stop-color="#e91e63" />
+                                                <stop offset="100%" stop-color="#673ab7" />
+                                            </linearGradient>
+                                        </defs>
+                                        <circle cx="80" cy="80" r="70" class="progress-circle" fill="transparent"
+                                            stroke-linecap="round" />
+                                    </svg>
+                                </div>
+                                <h3 class="mt-3 text-muted">Rent collected</h3>
+                            </div>
+                        </div>
+                        <!-- Graph-2 -->
+                        <div class="col-lg-6 col-sm-12">
+                            <div class="card text-center">
+                                <div class="collection">
+                                    <div class="outer">
+                                        <div class="inner">
+                                            <h1 id="number2">
+
+                                            </h1>
+                                        </div>
+                                    </div>
+
+                                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
+                                        <defs>
+                                            <linearGradient id="GradientColor">
+                                                <stop offset="0%" stop-color="#e91e63" />
+                                                <stop offset="100%" stop-color="#673ab7" />
+                                            </linearGradient>
+                                        </defs>
+                                        <circle cx="80" cy="80" r="70" class="progress-circle" fill="transparent"
+                                            stroke-linecap="round" />
+                                    </svg>
+                                </div>
+                                <h3 class="mt-3 text-muted">Rent collected</h3>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Guest and owner Payment information -->
@@ -184,6 +208,31 @@
             </div>
 
         </div>
+
+        <script>
+
+            function sleep(ms) {
+                return new Promise(resolve => setTimeout(resolve, ms));
+            }
+
+            async function prog(data) {
+                const circle = document.querySelector('.progress-circle');
+                let number = document.getElementById("number");
+                let number2 = document.getElementById("number2");
+                let counter = 0;
+                const circumference = circle.getTotalLength();
+                for (i = 0; i <= data; i++) {
+                    var nm = circumference - (i / 100) * circumference;
+                    circle.style.strokeDashoffset = nm;
+                    number.innerHTML = i + "%";
+                    number2.innerHTML = i + "%";
+                    await sleep(10);
+                }
+            }
+
+            prog(72);
+
+        </script>
     </section>
 </body>
 
